# gaeilge-meadrach

./: LÉIGHMÉ.md  README.md  méadrach.sh  méadrach.webm  méadrach3d.sh  méadrach3d_clno.pyga  méadrach_clno.pyga  pyproject.toml
méadrach/: chessboard.py
méadrach/scripteanna/: méadrach.pyga  méadrach3d.pyga
samhlacha/: LICENSE
seadalach/: trypanda.py
teisteanna/: test_méadrach.py
