[tool.poetry]
name = "méadrach"
version = "0.1.0"
description = ""
authors = ["Phil Weir <phil.weir@flaxandteal.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
avantpy-extended = { git = "https://github.com/philtweir/avantpy-extended.git", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
