[tool.poetry]
name = "méadrach"
version = "0.1.0"
description = ""
authors = ["Phil Weir <phil.weir@flaxandteal.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
avantpy-extended = "^0.1.2"
Panda3D = "^1.10.10"
"avantpy-trans.curses" = "^0.0.2"
"avantpy-trans.panda3d" = "0.0.2"
"avantpy-trans.direct" = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
